--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
-    "expo-font": "~11.1.1"
+    "expo-font": "~11.1.1",
+     "@react-navigation/stack": "^6.3.17",
+      "@react-navigation/bottom-tabs": "^6.5.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
