--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-native": "0.71.8",
     "expo-font": "~11.1.1",
      "@react-navigation/stack": "^6.3.17",
-      "@react-navigation/bottom-tabs": "^6.5.8"
+      "@react-navigation/bottom-tabs": "^6.5.8",
+       "@react-navigation/native": "^6.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
