--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "react-native-gesture-handler": "^2.12.1",
     "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "^4.7.1",
-    "react-native-screens": "^3.24.0"
+    "react-native-screens": "^3.24.0",
+    "react-native-maps": "1.3.2",
+    "expo-location": "~15.1.1",
+    "expo-camera": "~13.2.1",
+    "expo-media-library": "~15.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
